<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="50dp"
        android:hint="@string/send_to_third_activity"
        android:importantForAutofill="no"
        android:inputType="text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deliverResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:text="@string/deliver_result" />

    <EditText
        android:id="@+id/sendData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="50dp"
        android:hint="@string/value"
        android:importantForAutofill="no"
        android:inputType="text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/save" />

    <TextView
        android:id="@+id/editData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:hint="@string/value"
        android:importantForAutofill="no" />

</FrameLayout>